--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "next": "13.5.6",
+    "next": "^13.5.6",
     "next-auth": "^4.24.3",
     "next-themes": "^0.2.1",
     "react": "^18",
