--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "next": "^13.5.6"
   }
 }
