--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/react-redux": "^7.1.30",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,7 +37,9 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "recharts": "^2.9.3",
+    "redux": "^4.2.1",
     "spotify-web-api-node": "^5.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
