--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
+    "vaul": "^0.8.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
